--- a/banner/src/main/res/values/color.xml
+++ b/banner/src/main/res/values/color.xml
@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorRed">#ff0000</color>
+    <color name="titleBackground">#809f9f9f</color>
+    <color name="colorBlack">#000000</color>
+    <color name="colorWhite">#ffffff</color>
 </resources>
