--- a/banner/src/main/res/layout/banner.xml
+++ b/banner/src/main/res/layout/banner.xml
@@ -7,27 +7,32 @@
     <com.zhou.banner.BannerViewPager
         android:id="@+id/banner_viewpager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:visibility="gone"
-            android:text="指示器" />
-    </LinearLayout>
+        android:layout_height="match_parent" />
 
 
     <TextView
-        android:layout_width="wrap_content"
+        android:id="@+id/banner_title"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/titleBackground"
+        android:padding="5dp"
+        android:text="标题"
+        android:textColor="@color/colorWhite"
+        android:textSize="@dimen/banner_text_size_14"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:visibility="gone"
-        android:text="标题" />
+        app:layout_constraintRight_toRightOf="parent" />
+
+    <LinearLayout
+        android:id="@+id/banner_indicator_layout"
+        android:layout_width="200dp"
+        android:layout_height="0dp"
+        android:background="@color/colorRed"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="@id/banner_title"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="@id/banner_title">
+
+    </LinearLayout>
+
 </android.support.constraint.ConstraintLayout>
