--- a/banner/src/main/res/layout/banner.xml
+++ b/banner/src/main/res/layout/banner.xml
@@ -23,16 +23,13 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
 
-    <LinearLayout
-        android:id="@+id/banner_indicator_layout"
-        android:layout_width="200dp"
+    <com.zhou.banner.indicator.BannerIndicatorView
+        android:id="@+id/banner_indicator"
+        android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:background="@color/colorRed"
-        android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="@id/banner_title"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="@id/banner_title">
-
-    </LinearLayout>
+        app:layout_constraintTop_toTopOf="@id/banner_title" />
 
 </android.support.constraint.ConstraintLayout>
